Add Distance endpoint and handler Add call to GeoService Locator Add code to encode JSON to coordinate meodel
