# src/main/resources/api.yaml
@@ -5,68 +5,56 @@ info:
 tags:
   - name: dapi
 paths:
-  /example/{forename}/surname/{surname}:
+
+  /distance:
     get:
-      tags: [example]
-      x-scala-package: example
-      operationId: getExample
-      summary: Returns an example message
+      tags: [gps]
+      x-scala-package: distance
+      operationId: getDistance
+      summary: Returns a distance calculation message
       parameters:
-        - name: forename
-          in: path
-          required: true
-          description: the forename identifier, as personId
-          schema:
-            type: string
-        - name: surname
-          in: path
-          required: true
-          description: the surname identifier, as personId
-          schema:
-            type: string
+        - $ref: '#/components/parameters/CityParam'
+        - $ref: '#/components/parameters/UnitsParam'
       responses:
         200:
-          description: Example message
+          description: Distance result
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ExampleResponse'
+                $ref: '#/components/schemas/DistanceResponse'
 
 components:
 
-  securitySchemes:
-    bearerAuth:            # arbitrary name for the security scheme
-      type: http
-      scheme: bearer
-      bearerFormat: JWT    # optional, arbitrary value for documentation purposes
-  # 2) Apply the security globally to all operations
-  security:
-    - bearerAuth: []
-
   parameters:
-    IdParam:
-      name: id
-      in: query
-      description: Id of object to return
-      schema:
-        type: integer
-        format: int32
 
-    IdParamOptional:
-      name: id
+    CityParam:
+      name: city
       in: query
-      description: Id of object to return
+      description: One or more cities, mimimum 2 required.
+      required: true
+      schema:
+        type: array
+        items:
+          type: string
+          pattern: '^[a-zA-Z]{3,}$'  # At least 3 alpha characters
+        uniqueItems: true
+      examples:
+        oneCity:
+          summary: Example of one city (2 are required to generate a distance)
+          value: ["Summertown"]
+        multipleCities:
+          summary: Example of multiple cities (only first 2 will be used)
+          value: ["Summertown","Qutyini","Osgiliath"]
+
+    UnitsParam:
+      name: units
+      in: query
+      description: Code for distance units to be used in calculating the distance between the cities
       required: false
       schema:
-        type: integer
-        format: int32
-
-    NameParam:
-      name: name
-      in: query
-      description: Name of object
-      schema:
         type: string
+        enum: ["KM", "SMI", "NMI"]
+        default: "KM"
 
     MaxItems:
       name: maxItems
@@ -79,14 +67,37 @@ components:
         minimum: 100
         default: 5000
 
+    PageNumberParam:
+      name: pageNumber
+      in: query
+      description: Page Number
+      schema:
+        type: integer
+        format: int32
+        minimum: 1
+        default: 1
+
+    PageSizeParam:
+      name: pageSize
+      in: query
+      description: Page Size
+      schema:
+        type: integer
+        format: int32
+        minimum: 1
+        maximum: 500
+        default: 200
+
   schemas:
 
-    DistancesResponse:
+    DistanceResponse:
       type: object
       properties:
         count:
           type: integer
           format: int32
+        units:
+          type: string
         distances:
           type: array
           items:
@@ -106,11 +117,3 @@ components:
                 format: int32
               units:
                 type: string
-
-    ExampleResponse:
-      type: object
-      properties:
-        message:
-          type: string
-      required:
-        - message
